geoserver/geoserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoserver
  namespace: ns-sigemad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoserver
  template:
    metadata:
      labels:
        app: geoserver
    spec:
      containers:
      - name: geoserver
        image: docker.osgeo.org/geoserver:2.26.2
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: geoserver-data
            mountPath: /opt/geoserver_data
          - name: geoserver-global-override
            mountPath: /opt/geoserver_data/global.xml
            subPath: global.xml
      volumes:
        - name: geoserver-data
          persistentVolumeClaim:
            claimName: pvc-geoserver
        - name: geoserver-global-override
          configMap:
            name: geoserver-global-cm
