geoserver/geoserver-service.yaml
# geoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-geoserver
  namespace: ns-sigemad
spec:
  selector:
    app: geoserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
