geoserver/geoserver-ingress.yaml
# geoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoserver-ingress
  namespace: ns-sigemad-release
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Otras anotaciones si quieres reescritura, SSL, etc.
spec:
  rules:
  - host: geoserver-release.sigemad.duckdns.org
    http:
      paths:
      - path: /geoserver
        pathType: Prefix
        backend:
          service:
            name: svc-geoserver
            port:
              number: 8080

# Si quieres HTTPS (TLS), añade:
# tls:
#   - hosts:
#       - geoserver.sigemad.duckdns.org
#     secretName: geoserver-tls
